tests/ui/associated-inherent-types/bugs/cycle-iat-inside-of-where-predicate.stderr
error[E0391]: cycle detected when computing predicates of `user`
  --> $DIR/cycle-iat-inside-of-where-predicate.rs:8:1
   |
LL | fn user<T>() where S<T>::P: std::fmt::Debug {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: ...which requires computing predicates of `user`...
  --> $DIR/cycle-iat-inside-of-where-predicate.rs:8:1
   |
LL | fn user<T>() where S<T>::P: std::fmt::Debug {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: ...which requires computing explicit predicates of `user`...
  --> $DIR/cycle-iat-inside-of-where-predicate.rs:8:1
   |
LL | fn user<T>() where S<T>::P: std::fmt::Debug {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: ...which requires computing normalized predicates of `user`...
  --> $DIR/cycle-iat-inside-of-where-predicate.rs:8:1
   |
LL | fn user<T>() where S<T>::P: std::fmt::Debug {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: ...which again requires computing predicates of `user`, completing the cycle
note: cycle used when checking that `user` is well-formed
  --> $DIR/cycle-iat-inside-of-where-predicate.rs:8:1
   |
LL | fn user<T>() where S<T>::P: std::fmt::Debug {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: see https://rustc-dev-guide.rust-lang.org/overview.html#queries and https://rustc-dev-guide.rust-lang.org/query.html for more information

error[E0392]: type parameter `T` is never used
  --> $DIR/cycle-iat-inside-of-where-predicate.rs:10:10
   |
LL | struct S<T>;
   |          ^ unused type parameter
   |
   = help: consider removing `T`, referring to it in a field, or using a marker such as `PhantomData`
   = help: if you intended `T` to be a const parameter, use `const T: /* Type */` instead

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0391, E0392.
For more information about an error, try `rustc --explain E0391`.
